fixing wrap

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ article {
     background-color: whitesmoke;
     border-style: groove;
     border-color: rgb(162, 153, 170, .4);
-    margin: 30px;
+    margin: 20px;
     margin-top: 0px;
     padding: 15px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
